change to ldap auth, embedded test server, maven-failsafe